Updated Java library with JNI project source template to allow native access.
Signed-off-by: Phil Gaiser <phil.gaiser@raven-computing.com>